// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTemplate rendering 1`] = `
<html>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1, shrink-to-fit=no"
      name="viewport"
    />
    <meta
      content="Regular expression visualization tool using railroad diagrams"
      name="description"
    />
    <link
      href="/humans.txt"
      rel="author"
    />
    <title>
      Regexper
    </title>
  </head>
  <body
    data-build-id="test-id"
  >
    <header
      data-banner="testing"
      id="main"
    >
      <h1>
        <a
          href="/"
        >
          Regexper
        </a>
      </h1>
      <ul>
        <li>
          <a
            href="https://github.com/javallone/regexper-static"
          >
            mock SVG
            Source on GitHub
          </a>
        </li>
      </ul>
    </header>
    <p>
      Content
    </p>
    <footer>
      <ul
        className="inline-list"
      >
        <li>
          Created by 
          <a
            href="mailto:jeff.avallone@gmail.com"
          >
            Jeff Avallone
          </a>
        </li>
        <li>
          Generated images licensed: 
          <a
            href="http://creativecommons.org/licenses/by/3.0/"
            rel="license"
          >
            <img
              alt="Creative Commons CC-BY-3.0 License"
              src="https://licensebuttons.net/l/by/3.0/80x15.png"
            />
          </a>
        </li>
      </ul>
    </footer>
  </body>
</html>
`;

exports[`PageTemplate rendering with title 1`] = `
<html>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1, shrink-to-fit=no"
      name="viewport"
    />
    <meta
      content="Regular expression visualization tool using railroad diagrams"
      name="description"
    />
    <link
      href="/humans.txt"
      rel="author"
    />
    <title>
      Regexper
       - Example
    </title>
  </head>
  <body
    data-build-id="test-id"
  >
    <header
      data-banner="testing"
      id="main"
    >
      <h1>
        <a
          href="/"
        >
          Regexper
        </a>
      </h1>
      <ul>
        <li>
          <a
            href="https://github.com/javallone/regexper-static"
          >
            mock SVG
            Source on GitHub
          </a>
        </li>
      </ul>
    </header>
    <p>
      Content
    </p>
    <footer>
      <ul
        className="inline-list"
      >
        <li>
          Created by 
          <a
            href="mailto:jeff.avallone@gmail.com"
          >
            Jeff Avallone
          </a>
        </li>
        <li>
          Generated images licensed: 
          <a
            href="http://creativecommons.org/licenses/by/3.0/"
            rel="license"
          >
            <img
              alt="Creative Commons CC-BY-3.0 License"
              src="https://licensebuttons.net/l/by/3.0/80x15.png"
            />
          </a>
        </li>
      </ul>
    </footer>
  </body>
</html>
`;
